update: add protocolId to FeatureInput